--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 <header class="navbar navbar-default navbar-fixed-top navbar-book">
     <div class="container">
         <div class="navbar-header">
-            <a href="" class="navbar-brand">Ruby on Rails 教程</a>
+            <a href="{{ site.homeurl }}/" class="navbar-brand">Ruby on Rails 教程</a>
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".book-navbar-collapse">
                 <span class="sr-only">导航</span>
                 <i class="fa fa-bars"></i>
@@ -30,7 +30,7 @@
         <nav class="collapse navbar-collapse book-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.homeurl }}" title="首页">首页</a></li>
-                <li class="active"><a href="">博客</a></li>
+                <li class="active"><a href="{{ site.homeurl }}/blog/">博客</a></li>
                 <li><a href="">论坛</a></li>
                 <li class="hidden-xs"><div><a href="{{ site.homeurl }}/#purchase" class="btn btn-warning navbar-btn" title="购买电子书">购买</a></div></li>
             </ul>
