--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
         <nav class="collapse navbar-collapse book-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.homeurl }}" title="首页">首页</a></li>
+                <li><a href="{{ site.homeurl }}/read/" title="在线阅读">阅读</a></li>
                 <li class="active"><a href="{{ site.homeurl }}/blog/">博客</a></li>
                 <li><a href="">论坛</a></li>
                 <li class="hidden-xs"><div><a href="{{ site.homeurl }}/#purchase" class="btn btn-warning navbar-btn" title="购买电子书">购买</a></div></li>
